--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,13 @@
     <string name="sort_popular">popular</string>
     <string name="action_sort">Sort</string>
     <string name="baseurl" translatable="false">https://api.themoviedb.org/3/movie/</string>
-    <string name="apikey" translatable="false">598665b866adbd6db12ef6673546090f</string>
+    <string name="apikey" translatable="false">[YOUR_API_KEY]</string>
     <string name="title_activity_movie_detail">Movie Detail</string>
     <string name="released_on">Released on</string>
     <string name="synopsis">Synopsis</string>
     <string name="adult_content">Adult Content</string>
     <string name="transition_movies_avatar">transition_movies_avatar</string>
+    <string name="sort_top_rated">top_rated</string>
+    <string name="by_popularity">By Popularity</string>
+    <string name="by_rating">By Rating</string>
 </resources>
